--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,10 @@ body {
   margin-bottom: 2rem;
   border-radius: 0.3rem;
 }
+
+/* footer {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+} */
